[tool.poetry]
name = "repl-nix-jlpt-quiz-master"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_jlpt_quiz_master"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
